tests/paczka1/small_fuzzy/47503966.err
Error in line 3: KBiJ S431 45,1
Error in line 1: 3hJH2jJzte2 S431 20,0
